--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/images/lemon-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/assets/css/output.css" rel="stylesheet" />
-    <title>🍋 Firebase | Chat Sample </title>
+    <title>Firebase | Chat Sample </title>
   </head>
   <body>
     <div id="root"></div>
