--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/images/lemon-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="@anderson.lima.dev" />
     <link href="/assets/css/output.css" rel="stylesheet" />
-    <title>Firebase | Chat Sample </title>
+    <title>Lemon | firechat </title>
   </head>
   <body>
     <div id="root"></div>
